--- a/prod/index.html
+++ b/prod/index.html
@@ -13,7 +13,7 @@
 <script src="https://unpkg.com/react-dom@15.4.0/dist/react-dom.js"></script>
 <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
 
-<script type="text/babel" src="b.js">
+<script type="text/babel" src="bundle.js">
 
 </script>
 </body>
